--- a/apps/templates/bookmodule/bookList.html
+++ b/apps/templates/bookmodule/bookList.html
@@ -1,17 +1,14 @@
-{% extends "layouts/base.html" %}
-
-{% block title %} Book List {% endblock title %}
-
-{% block content %}
-<h2>Search Results</h2>
-<ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Books</title>
+</head>
+<body>
+    <h1>Books containing "and" in the title:</h1>
     {% for book in books %}
-        <li>
-            <strong>Title:</strong> {{ book.title }} <br/>
-            <strong>Author:</strong> {{ book.author }}
-        </li>
-    {% empty %}
-        <li>No books found matching your criteria.</li>
+        <p>ID: {{ book.id }}, Title: {{ book.title }}</p>
+        <hr>
     {% endfor %}
-</ul>
-{% endblock content %}
+</body>
+</html>
