--- a/apps/templates/bookmodule/task2.html
+++ b/apps/templates/bookmodule/task2.html
@@ -1,6 +1,6 @@
-<h1>Books with Editions Higher than 2 and 'qu' in Title or Author</h1>
+<h2>Courses with Student Count</h2>
 <ul>
-    {% for book in books %}
-        <li>{{ book.title }} - {{ book.author }} - Edition: {{ book.edition }}</li>
-    {% endfor %}
+  {% for course in courses %}
+    <li>{{ course.title }} ({{ course.code }}): {{ course.student_count }} students</li>
+  {% endfor %}
 </ul>
