--- a/apps/templates/bookmodule/task4.html
+++ b/apps/templates/bookmodule/task4.html
@@ -1,6 +1,6 @@
-<h1>Books Ordered by Title</h1>
+<h2>Departments with More Than Two Students</h2>
 <ul>
-    {% for book in books %}
-        <li>{{ book.title }} - {{ book.author }} - ${{ book.price }}</li>
-    {% endfor %}
+  {% for dept in departments %}
+    <li>{{ dept.name }}: {{ dept.student_count }} students</li>
+  {% endfor %}
 </ul>
